# BasicDevcontainerProject

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  proj.code-workspace
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/.docker/: .bashrc  .gitconfig  .profile  Dockerfile
cmake/: fetch_external_dependencies.cmake
src/: CMakeLists.txt
src/example/application/: CMakeLists.txt
src/example/application/inc/example/application/: CFileTemplate.hpp
src/example/application/src/: CFileTemplate.cpp  main.cpp
